--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 </nav>
 
 <!--Scroll Up Button-->
-<button id="scroll-up-button" onclick="scrollToTop()">Scroll Up</button>
+<button id="scroll-up-button" onclick="scrollToTop()"><span class="material-symbols-outlined">expand_less</span></button>
 
 <!--Hero Image-->
 <section class="hero">
     <main class="welcome">
         <h1>Selamat Datang</h1>
-        <a href="#" class="cta">Pesan</a>
+        <a href="#Kontak" class="cta">Pesan</a>
     </main>
 </section>
 
@@ -91,6 +91,61 @@
 <!--Menu-->
 <section class="menu" id="Menu">
     <h1>Menu</h1>
+    <div class="tab-Menu">
+        <input type="radio" id="tab-Menu-Gorengan" name="tabMenu" checked="checked">
+        <label for="tab-Menu-Gorengan"> Gorengan </label>
+        <div class="tab">
+            <h2>Gorengan</h2>
+            <ul>
+                <li>Bakwan sayur</li>
+                <li>Bakwan Jagung</li>
+                <li>Bakwan Sayur Udang</li>
+            </ul>
+        </div>
+
+        <input type="radio" id="tab-Menu-Pempek" name="tabMenu">
+        <label for="tab-Menu-Pempek"> Pempek </label>
+        <div class="tab">
+            <h2>Pempek</h2>
+            <ul>
+                <li>Lenjer</li>
+                <li>Kapal Selam</li>
+            </ul>
+        </div>
+
+        <input type="radio" id="tab-Menu-Ayam-Goreng" name="tabMenu">
+        <label for="tab-Menu-Ayam-Goreng"> Ayam Goreng </label>
+        <div class="tab">
+            <h2>Ayam Goreng</h2>
+            <ul>
+                <li>Ayam Goreng Sambal bawang Cak Eko</li>
+            </ul>
+        </div>
+
+        <input type="radio" id="tab-Menu-Bakso" name="tabMenu">
+        <label for="tab-Menu-Bakso"> Bakso </label>
+        <div class="tab">
+            <h2>Bakso</h2>
+            <ul>
+                <li>Bakso Goreng</li>
+            </ul>
+        </div>
+    </div>
+</section>
+
+<!--Kontak-->
+<section class="kontak" id="Kontak">
+    <h1>Kontak</h1>
+    <div class="icon">
+        <a href="https://wa.me/+6285884650682" target="_blank">
+            <img src="assets/WhatsApp-Icon.png" alt="WhatsApp-Icon">
+        </a>
+    </div>
+</section>
+
+<!--Copyright-->
+<section class="copyright">
+    <h3>copyright</h3>
 </section>
 
 <!--Feather-Icons-->
